[gd_scene load_steps=27 format=3 uid="uid://bq6upyvxnf8ao"]

[ext_resource type="Script" uid="uid://onhxd1lg8e2w" path="res://场景/主场景/main.gd" id="1_7mycd"]
[ext_resource type="Script" uid="uid://b28bgdf0e7hht" path="res://场景/主场景/挡板.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://c376hki3hvlc7" path="res://场景/主场景/球.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://dcb6vryqclclv" path="res://类/SoundButton.gd" id="2_v0jic"]
[ext_resource type="Script" uid="uid://blhe1eqdetpr2" path="res://类/DynamicLabel.gd" id="3_7c2yj"]
[ext_resource type="PackedScene" uid="uid://bhnmdflmi6f1p" path="res://场景/砖块场景/Brick.tscn" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://cnmdavkf046yp" path="res://场景/主场景/砖块区域.gd" id="4_lquwl"]
[ext_resource type="Script" uid="uid://da2v14487wh0d" path="res://资源/砖块数据/砖块数据.gd" id="7_dtaj0"]
[ext_resource type="Resource" uid="uid://c8xg7gr06a774" path="res://资源/砖块数据/砖块数据_白色.tres" id="8_7c2yj"]
[ext_resource type="Resource" uid="uid://pilb0kadfv6v" path="res://资源/砖块数据/砖块数据_蓝色.tres" id="9_qxhba"]
[ext_resource type="Resource" uid="uid://cqskrlabjwy0b" path="res://资源/砖块数据/砖块数据_红色.tres" id="10_2s7da"]
[ext_resource type="Resource" uid="uid://frxs1gvv0iww" path="res://资源/砖块数据/砖块数据_金色.tres" id="11_idkn5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dtaj0"]
bg_color = Color(0.59607846, 0.7137255, 0.8666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2s7da"]
bg_color = Color(0.59607846, 0.7137255, 0.8666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxhba"]
bg_color = Color(0.59607846, 0.7137255, 0.8666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7c2yj"]
bg_color = Color(0.59607846, 0.7137255, 0.8666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idkn5"]
bg_color = Color(0.59607846, 0.7137255, 0.8666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36gte"]
bg_color = Color(0.59607846, 0.7137255, 0.8666667, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7dm0k"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ig7tw"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0xm2m"]
normal = Vector2(0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lquwl"]
height = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="CircleShape2D" id="CircleShape2D_dtaj0"]
radius = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1jnf"]
bg_color = Color(0.48747635, 0.76234657, 0.93235946, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(1150, 100)

[node name="Main" type="Node2D"]
script = ExtResource("1_7mycd")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="开始界面" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/开始界面"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/开始界面/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GUI/开始界面/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GAME_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="开始按钮" type="Button" parent="GUI/开始界面/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_dtaj0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2s7da")
theme_override_styles/hover = SubResource("StyleBoxFlat_qxhba")
text = "BTN_START"
script = ExtResource("2_v0jic")
metadata/_custom_type_script = "uid://dcb6vryqclclv"

[node name="结束界面" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/结束界面"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/结束界面/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GUI/结束界面/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GAME_OVER"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_7c2yj")
trans_key = "GAME_OVER"
metadata/_custom_type_script = "uid://blhe1eqdetpr2"

[node name="最终分数" type="Label" parent="GUI/结束界面/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "FINAL_SCORE"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_7c2yj")
trans_key = "FINAL_SCORE"
metadata/_custom_type_script = "uid://blhe1eqdetpr2"

[node name="重开按钮" type="Button" parent="GUI/结束界面/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_7c2yj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_idkn5")
theme_override_styles/hover = SubResource("StyleBoxFlat_36gte")
text = "BTN_RESTART"
script = ExtResource("2_v0jic")
metadata/_custom_type_script = "uid://dcb6vryqclclv"

[node name="分数显示" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="分数" type="Label" parent="GUI/分数显示"]
layout_mode = 0
offset_left = 939.0
offset_top = 30.0
offset_right = 1029.0
offset_bottom = 53.0
text = "SCORE_LABEL"
script = ExtResource("3_7c2yj")
trans_key = "SCORE_LABEL"
metadata/_custom_type_script = "uid://blhe1eqdetpr2"

[node name="剩余砖块" type="Label" parent="GUI/分数显示"]
layout_mode = 0
offset_left = 96.0
offset_top = 36.0
offset_right = 190.0
offset_bottom = 59.0
text = "BRICK_COUNT"
script = ExtResource("3_7c2yj")
trans_key = "BRICK_COUNT"
metadata/_custom_type_script = "uid://blhe1eqdetpr2"

[node name="倒计时显示" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GUI/倒计时显示"]
layout_mode = 0
offset_left = 276.0
offset_right = 876.0
offset_bottom = 648.0
pivot_offset = Vector2(300, 324)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 128
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_7c2yj")
trans_key = "COUNTDOWN_TIMEOUT"
metadata/_custom_type_script = "uid://blhe1eqdetpr2"

[node name="游戏管理" type="Node2D" parent="."]

[node name="墙" type="Node2D" parent="游戏管理"]

[node name="左墙" type="StaticBody2D" parent="游戏管理/墙"]
position = Vector2(276, 0)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="游戏管理/墙/左墙"]
shape = SubResource("WorldBoundaryShape2D_7dm0k")

[node name="ColorRect" type="ColorRect" parent="游戏管理/墙/左墙"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 648.0
grow_horizontal = 0
color = Color(1, 0.55628604, 0.49291265, 1)

[node name="右墙" type="StaticBody2D" parent="游戏管理/墙"]
position = Vector2(876, 0)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="游戏管理/墙/右墙"]
shape = SubResource("WorldBoundaryShape2D_ig7tw")

[node name="ColorRect" type="ColorRect" parent="游戏管理/墙/右墙"]
offset_right = 40.0
offset_bottom = 648.0
color = Color(1, 0.5568628, 0.49411765, 1)

[node name="上墙" type="StaticBody2D" parent="游戏管理/墙"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="游戏管理/墙/上墙"]
shape = SubResource("WorldBoundaryShape2D_0xm2m")

[node name="挡板" type="CharacterBody2D" parent="游戏管理"]
position = Vector2(576, 620)
collision_layer = 2
script = ExtResource("1_ig7tw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="游戏管理/挡板"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_lquwl")

[node name="Panel" type="Panel" parent="游戏管理/挡板"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 10)
theme_override_styles/panel = SubResource("StyleBoxFlat_lquwl")

[node name="球" type="CharacterBody2D" parent="游戏管理"]
position = Vector2(576, 600)
collision_layer = 4
collision_mask = 11
script = ExtResource("2_0xm2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="游戏管理/球"]
shape = SubResource("CircleShape2D_dtaj0")

[node name="Panel" type="Panel" parent="游戏管理/球"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(5, 5)
theme_override_styles/panel = SubResource("StyleBoxFlat_n1jnf")

[node name="死亡区域" type="Area2D" parent="游戏管理"]
position = Vector2(576, 740)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="游戏管理/死亡区域"]
shape = SubResource("RectangleShape2D_0xm2m")

[node name="砖块区域" type="Node2D" parent="游戏管理"]
position = Vector2(276, 0)
script = ExtResource("4_lquwl")
brick_scene = ExtResource("4_1bvp3")
brick_data_res = Array[ExtResource("7_dtaj0")]([ExtResource("8_7c2yj"), ExtResource("9_qxhba"), ExtResource("10_2s7da"), ExtResource("11_idkn5")])

[connection signal="pressed" from="GUI/开始界面/HBoxContainer/VBoxContainer/开始按钮" to="." method="_on_开始按钮_pressed"]
[connection signal="pressed" from="GUI/结束界面/HBoxContainer/VBoxContainer/重开按钮" to="." method="_on_重开按钮_pressed"]
[connection signal="body_entered" from="游戏管理/死亡区域" to="." method="_on_死亡区域_body_entered"]
[connection signal="update_brick_count" from="游戏管理/砖块区域" to="." method="_on_砖块区域_update_brick_count"]
[connection signal="update_score" from="游戏管理/砖块区域" to="." method="_on_砖块区域_update_score"]
